# pyglotaran-alias

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyglotaran_alias.py  pyproject.toml  requirements_dev.txt  setup.cfg  test_pyglotaran_alias.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI_CD_actions.yml  autoupdate-pre-commit-config.yml
pyglotaran/: __init__.py
tests/: test_cli_exception.py  test_pyglotaran_alias.py
