[metadata]
name = pyglotaran-alias
version = 0.1.0
description = Convenience module which allows to use pyglotaran as alias in the CLI and imports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/pyglotaran-alias
author=Sebastian Weigand
author_email=s.weigand.phy@gmail.com
license=Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry

[options]
py_modules = pyglotaran_alias
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyglotaran = glotaran.cli.main:glotaran
