[metadata]
name = pyglotaran-alias
version = 0.0.3
description = Convenience module, which allows to use pyglotaran as alias in the CLI and imports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran-alias
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Physics
	Topic :: Scientific/Engineering :: Chemistry
project_urls =
	Core-Project = https://github.com/glotaran/pyglotaran
	Source = https://github.com/glotaran/pyglotaran-alias
	Tracker = https://github.com/glotaran/pyglotaran-alias/issues


[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
	pyglotaran = pyglotaran.cli.main:glotaran
